recursion.lessons.recursion.koch.Koch.scala.error
Koch:15: error: not found: value newlength
	     avance(newlength:Double);
                    ^Koch:17: error: not found: value newlength
	     avance(newlength:Double);
                    ^Koch:19: error: not found: value newlength
	     avance(newlength:Double);
                    ^Koch:21: error: not found: value newlength
	     avance(newlength:Double);	
                    ^