recursion.lessons.recursion.koch.Koch.scala.code
def snowFlake (levels:Int, length:Double) {
	setCouleur(Color.red:Color);
    snowSide(levels, length);
    right(120);
    setColor(Color.blue);
    snowSide(levels, length);
    right(120);
    setColor(Color.orange);
    snowSide(levels, length);
    right(120);
}
def snowSide(levels:Int, length:Double) {	
	if ( levels != 0 ) {
	     snowSide(levels-1,length/3);
	     avance(newlength:Double);
	     gauche(60:Double);
	     avance(newlength:Double);
	     droite(120:Double);
	     avance(newlength:Double);
	     gauche(60:Double);
	     avance(newlength:Double);	

} else { avance(length); }
}
